<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragment.PreferenceFragment">

    <TextView
        android:id="@+id/gender_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/what_are_you_looking_for"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="@id/gender_question"
        app:layout_constraintTop_toBottomOf="@id/gender_question">

        <RadioButton
            android:id="@+id/radio_button_men"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/men"/>
        <RadioButton
            android:id="@+id/radio_button_women"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/women"/>
        <RadioButton
            android:id="@+id/radio_button_other"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/other"/>
        <RadioButton
            android:id="@+id/radio_button_doesnt_matter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/doesnt_matter"/>
    </RadioGroup>

    <TextView
        android:id="@+id/programming_language_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/programming_languages"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"/>

    <!--Recyclerview-->

</androidx.constraintlayout.widget.ConstraintLayout>